# ThaiSecurities_Junior

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_questions_20.md
app/: main.py
app/api/: routes.py
app/core/: config.py  embeddings.py  ingestion.py  rag_engine.py  vector_store.py
app/services/: chat_store_service.py  index_service.py
scripts/: build_index.py
ui/: index.html  script.js  style.css
